--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,6 +1,3 @@
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
 
 .para,
 .small-para {
@@ -8,13 +5,20 @@ body {
   font-weight: 800;
 }
 
+.para {
+  font-size: 22px;
+}
+
 .small-para {
   font-size: 14px;
   font-weight: 800;
 }
 
-.para {
-  font-size: 22px;
+
+.button {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  font-size: 20px;https://file+.vscode-resource.vscode-cdn.net/Users/aislir/repos/css-exercises/foundations/06-cascade-fix/desired-outcome.png?version%3D1722592059016
 }
 
 .confirm {
@@ -23,10 +27,10 @@ body {
   font-weight: bold;
 } 
 
-.button {
-  background-color: rgb(255, 255, 255);
+.text {
   color: rgb(0, 0, 0);
-  font-size: 20px;
+  font-size: 22px;
+  font-weight: 100;
 }
 
 .child {
@@ -35,8 +39,6 @@ body {
   font-size: 14px;
 }
 
-div.text {
-  color: rgb(0, 0, 0);
-  font-size: 22px;
-  font-weight: 100;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
