--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,25 +1,39 @@
 .header  {
-  font-family: monospace;
+  font-family: 'Times New Roman', Times, serif;
   background: papayawhip;
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .logo {
-  font-size: 48px;
+  font-size: 36px;
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding: 4px 24px;
+  border: 0;
+  margin: 0;
 }
+
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 10px;
+  padding: 0;
+  border: 0;
+  margin: 0;
 }
 
 a {
-  font-size: 22px;
+  font-size: 16px;
   background: white;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+
 }
