--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,39 +1,33 @@
 body {
   font-family: 'Courier New', Courier, monospace;
-  display: flex;
-  flex-wrap: wrap;
-  text-align: center;
 }
 
 img {
   width: 100px;
   height: 100px;
-  display: flex;
-  align-self: center;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
   display: flex;
-  width: 956px;
-  margin-bottom: 32px;
-  //background-color: red;
   justify-content: center;
+  margin-bottom: 32px;
 }
 
 .plants {
   display: flex;
-  gap: 52px;
-  //background-color: green;
-  justify-content: space-between;
+  flex-direction: column;
+  text-wrap: wrap;
+  align-items: center;
+  width: 200px;
+  text-align: center;
 }
 
 .info {
   display: flex;
-  flex-direction: column;
-  //background-color: blue;
-  width: 200px;
+  gap: 52px;
+  justify-content: space-evenly;
 }
 
 /* do not edit this footer */
