--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,8 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 12px;
 }
 
 .icon {
@@ -33,6 +35,22 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
+}
+
+.container {
+  margin-left: 12px;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  font-weight:800;
+}
+
+.text {
+  margin-bottom: 12px;
+  margin-right: 12px;
 }
 
 .close-button {
